# im-switch

./: Cargo.toml  README.md  flake.nix
.github/workflows/: ci.yml  release.yml
src/: error.rs  lib.rs  main.rs  unsupported.rs
src/cli/: windows.rs
src/linux/: fcitx5.rs  ibus.rs  mod.rs
src/macos/: mod.rs
src/windows/: mod.rs
tests/: integration.rs
