[package]
name = "im-switch"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/drop-stones/im-switch"
description = "A cross-platform input method switcher — Rust crate + CLI"
rust-version = "1.91.0"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
thiserror = "2"

[target.'cfg(target_os = "linux")'.dependencies]
fcitx5-dbus = "0.1"
