[package]
name = "im-switch"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/drop-stones/im-switch"
description = "A cross-platform input method switcher — Rust crate + CLI"
rust-version = "1.91.0"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
thiserror = "2"

[target.'cfg(target_os = "linux")'.dependencies]
fcitx5-dbus = "0.1"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSThread"] }
objc2-app-kit = { version = "0.3", features = ["NSTextView", "NSTextInputContext"] }

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.62"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_Ime",
    "Win32_UI_Input_KeyboardAndMouse",
]
